force-app/main/default/objects/Customer_Concern__c/Customer_Concern__c.object-meta.xml
<CustomObject>
    <label>Customer Concern</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Customer Concern Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Concerns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>