force-app/main/default/objects/Customer_Concern__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Customer Concerns</relationshipLabel>
    <relationshipName>Customer_Concerns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>