force-app/main/default/objects/Customer_Concern__c/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Parts</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Amenities/Facilities</fullName>
            </value>
            <value>
                <fullName>Service Quality</fullName>
            </value>
            <value>
                <fullName>Service Experience</fullName>
            </value>
            <value>
                <fullName>Sales Concerns</fullName>
            </value>
            <value>
                <fullName>Merchandise Related</fullName>
            </value>
            <value>
                <fullName>Returns and Refunds</fullName>
            </value>
            <value>
                <fullName>Customer Care Issues</fullName>
            </value>
            <value>
                <fullName>Service Request</fullName>
            </value>
            <value>
                <fullName>General Query</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>