force-app/main/default/objects/Customer_Concern__c/fields/Case_Category_Update__c.field-meta.xml
<CustomField>
    <fullName>Case_Category_Update__c</fullName>
    <label>CRM Binning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parts</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Amenities/Facilities</fullName>
                <isActive>false</isActive>
                <label>Amenities/Facilities</label>
            </value>
            <value>
                <fullName>Customer Care Issues</fullName>
                <isActive>false</isActive>
                <label>Customer Care Issues</label>
            </value>
            <value>
                <fullName>General Query</fullName>
                <isActive>false</isActive>
                <label>General Query</label>
            </value>
            <value>
                <fullName>Merchandise Related</fullName>
                <isActive>false</isActive>
                <label>Merchandise Related</label>
            </value>
            <value>
                <fullName>Price</fullName>
                <isActive>false</isActive>
                <label>Price</label>
            </value>
            <value>
                <fullName>Returns and Refunds</fullName>
                <isActive>false</isActive>
                <label>Returns and Refunds</label>
            </value>
            <value>
                <fullName>Sales Concerns</fullName>
                <isActive>false</isActive>
                <label>Sales Concerns</label>
            </value>
            <value>
                <fullName>Service Experience</fullName>
                <isActive>false</isActive>
                <label>Service Experience</label>
            </value>
            <value>
                <fullName>Service Quality</fullName>
                <isActive>false</isActive>
                <label>Service Quality</label>
            </value>
            <value>
                <fullName>Service Request</fullName>
                <isActive>false</isActive>
                <label>Service Request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>