force-app/main/default/objects/Customer_Concern__c/fields/Closed_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Closed_Resolution__c</fullName>
    <label>Closed Resolution</label>
    <type>TextArea</type>
</CustomField>