force-app/main/default/objects/Customer_Concern__c/fields/Concerns__c.field-meta.xml
<CustomField>
    <fullName>Concerns__c</fullName>
    <label>Concerns</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Belt</fullName>
            </value>
            <value>
                <fullName>Brakes</fullName>
            </value>
            <value>
                <fullName>Bootlamp</fullName>
            </value>
            <value>
                <fullName>Centre Stand</fullName>
            </value>
            <value>
                <fullName>Charger</fullName>
            </value>
            <value>
                <fullName>Crash Guard</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Foot Peg LH</fullName>
            </value>
            <value>
                <fullName>HeadLamp</fullName>
            </value>
            <value>
                <fullName>Horn</fullName>
            </value>
            <value>
                <fullName>Indicator</fullName>
            </value>
            <value>
                <fullName>Lockset</fullName>
            </value>
            <value>
                <fullName>Mode</fullName>
            </value>
            <value>
                <fullName>Pannel</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>PRCD</fullName>
            </value>
            <value>
                <fullName>Range</fullName>
            </value>
            <value>
                <fullName>Vehicle Power Cut OFF</fullName>
            </value>
            <value>
                <fullName>Throttle</fullName>
            </value>
            <value>
                <fullName>Side stand</fullName>
            </value>
            <value>
                <fullName>Steering</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
            <value>
                <fullName>Switch Gear LH</fullName>
            </value>
            <value>
                <fullName>Switch Gear RH</fullName>
            </value>
            <value>
                <fullName>Tailamp</fullName>
            </value>
            <value>
                <fullName>Tyre</fullName>
            </value>
            <value>
                <fullName>USB</fullName>
            </value>
            <value>
                <fullName>Wheels</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>