force-app/main/default/objects/Customer_Concern__c/fields/Subconcerns__c.field-meta.xml
<CustomField>
    <fullName>Subconcerns__c</fullName>
    <label>Subconcerns</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Concerns__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Visor Damage</fullName>
            </value>
            <value>
                <fullName>Visor Fitment</fullName>
            </value>
            <value>
                <fullName>Floor Mat Damage</fullName>
            </value>
            <value>
                <fullName>Floor Mat Fitment</fullName>
            </value>
            <value>
                <fullName>Ladies Footrest Damage</fullName>
            </value>
            <value>
                <fullName>Ladies Footrest Fitment</fullName>
            </value>
            <value>
                <fullName>Seat Replacement</fullName>
            </value>
            <value>
                <fullName>Seat Cover Replace</fullName>
            </value>
            <value>
                <fullName>Seat Cover Fitment</fullName>
            </value>
            <value>
                <fullName>Mobile mount Damage</fullName>
            </value>
            <value>
                <fullName>Mobile mount Adjustment</fullName>
            </value>
            <value>
                <fullName>Mobile mount Fitment</fullName>
            </value>
            <value>
                <fullName>LH Mirror Damage</fullName>
            </value>
            <value>
                <fullName>LH Mirror Fitment</fullName>
            </value>
            <value>
                <fullName>RH Mirror Damage</fullName>
            </value>
            <value>
                <fullName>RH Mirror Fitment</fullName>
            </value>
            <value>
                <fullName>Panier Mount LH Damage</fullName>
            </value>
            <value>
                <fullName>Panier Mount LH Fitment</fullName>
            </value>
            <value>
                <fullName>Panier Mount RH Damage</fullName>
            </value>
            <value>
                <fullName>Panier Mount RH Fitment</fullName>
            </value>
            <value>
                <fullName>Belt Noise</fullName>
            </value>
            <value>
                <fullName>Snap</fullName>
            </value>
            <value>
                <fullName>Brakes Stuck</fullName>
            </value>
            <value>
                <fullName>Brakes Noise</fullName>
            </value>
            <value>
                <fullName>Sponginess</fullName>
            </value>
            <value>
                <fullName>Master Cylinder oil leak</fullName>
            </value>
            <value>
                <fullName>Caliper oil leak</fullName>
            </value>
            <value>
                <fullName>Disc bent FR</fullName>
            </value>
            <value>
                <fullName>Disc bent RR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>