force-app/main/default/objects/Customer_Concern__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Query</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Urgent Complaint</fullName>
            </value>
            <value>
                <fullName>Service Request</fullName>
            </value>
            <value>
                <fullName>PSFU Concerns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>