force-app/main/default/objects/Customer_Concern__c/fields/VOC__c.field-meta.xml
<CustomField>
    <fullName>VOC__c</fullName>
    <label>VOC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>